added in the video segments

--- a/website.html
+++ b/website.html
@@ -80,41 +80,61 @@ a:active {
   <!-- Top header -->
   <header class="w3-container w3-xlarge">
     <hr style="width:850px">
-    <p style="font-size:73%; font-family:Times New Roman;" align="justify"> My research interests lie in the area of artificial intelligence for visual perception. Towards this, my recent work lies in the area of representation learning for scene understanding tasks using deep convolutional neural networks (DCNs). The focus of the work has been threefold: 
-    <ul  style="font-size:73%; font-family:Times New Roman;" align="justify">
+    <p style="font-size:75%; font-family:Times New Roman;" align="justify"> My research interests lie in the area of artificial intelligence for visual perception. Towards this, my recent work lies in the area of representation learning for scene understanding tasks using deep convolutional neural networks (DCNs). The focus of the work has been threefold: 
+    <ul  style="font-size:65%; font-family:Times New Roman;" align="justify">
       <li> Systematic changes to the network architecture and loss function design to incorporate prior/contextual knowledge for improving performance at scene understanding tasks; </li>
       <li> Attention modelling for improving interpretability and performance of DCNs; </li>
-      <li> Geometrical analysis of DCN decision boundaries to characterise their behaviour and explain their adversarial vulnerability.</li>
-    </ul>
+      <li> Geometrical analysis of DCN decision boundaries to characterise their behaviour and explain their adversarial vulnerability.</li></ul>
     </p>
-    
+  <br />
   </header>
 
   <header class="w3-container w3-xlarge">
     <div id="hobbies"></div>
     <hr style="width:800px">
-    <h3 style="font-size:73%; font-family:Times New Roman;" align="justify">-- Recent Updates --</h3>
+    <h3 style="font-size:75%; font-family:Times New Roman;" align="justify">-- Recent Updates --</h3>
     <p><ul style="font-size:65%; font-family:Times New Roman;">
       <li>I presented my work on attention modelling in deep convolutional networks for classification at ICLR 2018.</li>
       <li>Received the St. Cross College research scholarship and ICLR 2018 travel award to attend ICLR in Vancouver this year.</li>
       <li>I organised a super exciting coding workshop for middle and high school students at the Hay Festival, more details here. </li>
       <li>Volunteered </li>
     </ul></p>
+  <br />
   </header>
 
   <header class="w3-container w3-xlarge">
     <div id="projects"></div>
     <hr style="width:800px">
-    <p style="font-size:73%; font-family:Times New Roman;" align="justify"> 
+    <h3 style="font-size:75%; font-family:Times New Roman;" align="justify">-- Research Projects --</h3>
+    <br />
+    <iframe width="300" height="220" align="left"  src="https://www.youtube.com/embed/zWZowrpaZ1c?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="margin-right:25px"></iframe>
+    <h3 style="font-size:85%; font-family:Times New Roman;" align="justify">Straight to Shapes</h3>
+    <p style="font-size:65%; font-family:Times New Roman;" align="justify"> 
+I want to be able to write the text alongside the videos/images. What happens if I keep writing the text till it hits the newline?
     </p>
+  <br />
   </header>
-  <iframe width="400" height="300" src="https://www.youtube.com/embed/zWZowrpaZ1c?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
   <header class="w3-container w3-xlarge">
-    <div id="contact"></div>
-    <hr style="width:800px">
-    <p style="font-size:73%; font-family:Times New Roman;" align="justify"> Email address - contact me for details of any project
+    <br /t >
+    <iframe width="300" height="220" align="left"  src="https://www.youtube.com/embed/zWZowrpaZ1c?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="margin-right:25px"></iframe>
+    <h3 style="font-size:85%; font-family:Times New Roman;" align="justify">Straight to Shapes</h3>
+    <p style="font-size:65%; font-family:Times New Roman;" align="justify"> 
+I want to be able to write the text alongside the videos/images. What happens if I keep writing the text till it hits the newline?
     </p>
+  <br />
   </header>
+
+  <header class="w3-container w3-xlarge">
+    <br />
+    <iframe width="300" height="220" align="left"  src="https://www.youtube.com/embed/zWZowrpaZ1c?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="margin-right:25px"></iframe>
+    <h3 style="font-size:85%; font-family:Times New Roman;" align="justify">Straight to Shapes</h3>
+    <p style="font-size:65%; font-family:Times New Roman;" align="justify"> 
+I want to be able to write the text alongside the videos/images. What happens if I keep writing the text till it hits the newline?
+    </p>
+  <br />
+  </header>
+
 
 
  <header class="w3-container w3-xlarge" >
